assets/variables.scss
// Ref: https://github.com/nuxt-community/vuetify-module#customvariables
//
// The variables you want to modify
// $font-size-root: 20px;
.text-center {
  margin-top: 32px;
}

a {
  display: block;
  text-decoration: none;
}

.mb-16 {
  margin-bottom: 64px;
}

.top-link {
  width: 343px;
  height: 20px;
}

.title-text {
  font-size: 20px;
}

